# gerbonara

./: .gitignore  .gitlab-ci.yml  .pypirc  LICENSE  MANIFEST.in  Makefile  README.md  Untitled.ipynb  coil_gen.py  coil_mag_materials.yml  coil_mag_sim.yml  coil_mag_solvers.yml  coil_parasitics.py  coil_parasitics_materials.yml  coil_test_board.py  pyproject.toml  pytest.ini  run-tests.sh  self-capacitance-actually-working.sif  self-capacitance-working.sif  setup.py  sim_runner.py  test-requirements.txt  test2.py  tox.ini  twisted_coil_gen.py  twisted_coil_gen_twolayer.py
docs/: aperture-macros.rst  apertures.rst  api-concepts.rst  cli.rst  conf.py  examples.rst  file-api.rst  graphic-primitive-api.rst  index.rst  object-api.rst  utilities.rst
examples/: bench.py  highlight_outline.py  load_directory.py  test_arc_approx.py
gerbonara/: NOTES  __init__.py  __main__.py  apertures.py  cam.py  cli.py  excellon.py  graphic_objects.py  graphic_primitives.py  ipc356.py  layer_rules.py  layers.py  newstroke.py  rs274x.py  utils.py
gerbonara/aperture_macros/: expression.py  parse.py  primitive.py
gerbonara/cad/: breakout.py  primitives.py  protoboard.py  protoserve.py
gerbonara/data/: protoserve.html
gerbonara/gerber/: __init__.py  am_read.py  am_statements.py  apertures.py  cam.py  common.py  excellon.py  excellon_statements.py  gerber_primitives.py  gerber_statements.py  graphic_objects.py  graphic_primitives.py  ipc356.py  layer_rules.py  layers.py  pcb.py  primitives.py  rs274x.py  utils.py
gerbonara/tests/: .gitignore  conftest.py  image_support.py  test_cad.py  test_cli.py  test_excellon.py  test_ipc356.py  (+7 more)
podman/: arch-testenv  ubuntu-testenv
tests/: conftest.py  image_support.py  test_am_expression.py  test_cli.py  test_dxf.py  test_excellon.py  test_ipc356.py  test_kicad_footprints.py  test_kicad_pcb.py  test_kicad_schematic.py  test_kicad_sexpr.py  test_kicad_symbols.py  test_layers.py  test_primitives.py  test_rs274x.py  test_utility.py  test_utils.py  utils.py
(+419 files in other folders)
